{
    "name": "PlayerControlls",
    "maps": [
        {
            "name": "Touch",
            "id": "2062762f-0284-4a08-ba90-e9800d50967d",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Button",
                    "id": "0cece91a-b3bd-4b06-a636-8c32226f6bc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "be9ded7a-1a54-467b-9d25-e394aa86dd36",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3b5339a-4778-4891-9e5c-a593e828904b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81899e57-df49-4b39-ae5a-b9a14f41d766",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": []
        }
    ]
}